#30: better traces for FUs

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -687,6 +687,10 @@
   .global-grid>div {
     gap: var(--gap);
   }
+  
+  .grid-gap {
+    gap: var(--gap);
+  }
 
   .issue {
     @apply flex flex-col items-center;
