#30: Accesibility of navbar, memory page

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -39,6 +39,8 @@
   /* Default border color */
   * {
     @apply border-outlineVariant dark:border-dark-outlineVariant list-inside;
+    /* used ar hsl(var(--name)) */
+    --ring: 0, 0%, 0%;
   }
 
   body {
