#30: Instruction list virtualization Performance enhancement

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -46,6 +46,7 @@
   body {
     @apply surface-container;
     font-family: 'Open Sans', sans-serif;
+    --hover-highlight-color: #D9E2FF;
   }
 
   /* main pane is for the page main content body */
