#30: isa form touchups, better hints

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -167,6 +167,10 @@
     @apply border-outline;
   }
 
+  .input {
+    @apply flex h-10 w-full rounded-md border border-input bg-inherit px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50;
+  }
+
   /* tables */
 
   table {
@@ -320,6 +324,7 @@
     height: 14px;
   }
 
+
   ::-webkit-scrollbar-thumb {
     @apply bg-neutral-80 dark:bg-neutral-20;
     border-radius: 10px;
@@ -333,6 +338,16 @@
 
   ::-webkit-scrollbar-corner {
     background-color: transparent;
+  }
+
+  .thin-scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  .thin-scrollbar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    border: 1px solid transparent;
   }
 
   /* Link underline in a text */
