#31: Hint in editing configuration

--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -841,4 +841,8 @@
   circle[data-active='true'] {
     @apply fill-primary-70 dark:fill-primary-60;
   }
+
+  .disable-children * {
+    @apply pointer-events-none;
+  }
 }
