--- a/Sources/frontend/src/styles/globals.css
+++ b/Sources/frontend/src/styles/globals.css
@@ -41,6 +41,15 @@
     @apply border-outlineVariant dark:border-dark-outlineVariant list-inside;
     /* used ar hsl(var(--name)) */
     --ring: 0, 0%, 0%;
+    --primary: #1B667D;
+    --secondaryContainer: #CDE7EC;
+    --onSecondaryContainer: #051F23;
+    --reactour-accent: #BAC6EA;
+  }
+
+  .dark * {
+    --secondaryContainer: #334B4F;
+    --onSecondaryContainer: #CDE7EC;
   }
 
   body {
@@ -59,6 +68,7 @@
     width: calc(100vw - 3.5rem - var(--pad));
   }
 
+  /* Pade is smaller for mobile */
   @media only screen and (max-width: 768px) {
     .main-pane {
       --pad: 30px;
